# tidalplan_pi

./: .gitignore  CMakeLists.txt  README.md
src/: tidalplan_icon_data.h  tidalplan_panel.cpp  tidalplan_panel.h  tidalplan_pi.cpp  tidalplan_pi.h  tidalplan_pi_minimal.cpp
